eks/6-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attend-frontend-svc
  namespace: frontend-ns
  labels:
    app: attend-frontend
spec: 
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 32000  # NodePort 설정 (포트는 원하는 값으로 설정)
  selector:
    app: attend-frontend
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: attend-backend-svc
  namespace: backend-ns
  labels:
    app: attend-backend
spec: 
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 32001  # NodePort 설정 (포트는 원하는 값으로 설정)
  selector:
    app: attend-backend
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: attend-db-svc
  namespace: database-ns
  labels:
    app: attend-db
spec: 
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 32002  # NodePort 설정 (포트는 원하는 값으로 설정)
  selector:
    app: attend-db
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: qa-frontend-svc
  namespace: frontend-ns
  labels:
    app: qa-frontend
spec: 
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 32003  # NodePort 설정 (포트는 원하는 값으로 설정)
  selector:
    app: qa-frontend
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: qa-backend-svc
  namespace: backend-ns
  labels:
    app: qa-backend
spec: 
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 32004  # NodePort 설정 (포트는 원하는 값으로 설정)
  selector:
    app: qa-backend
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: qa-db-svc
  namespace: database-ns
  labels:
    app: qa-db
spec: 
  ports:
  - port: 27017
    targetPort: 27017
    nodePort: 32005  # NodePort 설정 (포트는 원하는 값으로 설정)
  selector:
    app: qa-db
  type: NodePort
