eks/8-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: node-group
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - host: www.awsteam2.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: attend-frontend-svc
            port:
              number: 3000
      - path: /qa
        pathType: ImplementationSpecific
        backend:
          service:
            name: qa-frontend-svc
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: node-group
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - host: www.awsteam2.com
    http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: attend-backend-svc
            port:
              number: 5000
      - path: /qna
        pathType: ImplementationSpecific
        backend:
          service:
            name: qa-backend-svc
            port:
              number: 8000
